# CarbonoAppDemeter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  log.txt  search_log.py
docs/: API_AND_AUDIT_MODEL.md  APK_BUILD_GUIDE.md  APK_BUILD_SETUP.md  ARCHITECTURE.md  DATA_MODEL.md  FINAL_VALIDATION_REPORT.md  KNOWN_GAPS.md  PRODUCT_REQUIREMENTS.md  REFERENCE_IMPLEMENTATION_SCOPE.md  SECURITY_PRIVACY.md  SOURCE_REFERENCES.md  UI_SPEC.md  VISUAL_VALIDATION_WORKFLOW.md
infra/: README.md  docker-compose.yml
scientific/: AGENTS.md  DATA_PROVENANCE_SCHEMA.json  METHODOLOGY_REGISTRY.yaml  REVIEW_LOG.md  SCIENTIFIC_GUARDRAILS.md  SOURCE_REGISTRY.yaml  VALIDATION_PLAN.md
scripts/: README.md  build-apk.bat  prepare-screenshot-checklist.cjs  (+8 more)
services/api/: .env.example  AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: README.md  env.py
services/api/alembic/versions/: 0001_initial.py  001_initial_schema.py  002_scientific_sources.py  544c1fef07e6_add_assessmentmodel_and_is_confirmed.py
services/api/app/: main.py
services/api/app/api/: deps.py  router.py
services/api/app/api/routes/: assessments.py  health.py  methodologies.py  passports.py  properties.py
services/api/app/application/: memory_repository.py  passport_service.py  ports.py  postgres_repository.py
services/api/app/core/: config.py
services/api/app/domain/: eligibility.py  integrity.py  passport.py  provenance.py  schemas.py
services/api/app/persistence/: database.py  models.py  models_v2.py
services/api/tests/: test_api_integration.py  test_eligibility.py  test_integrity.py
(+79 files in other folders)
