[project]
name = "demeter-carbono-api"
version = "0.1.0"
description = "Backend auditável do MVP Demeter Carbono"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn[standard]>=0.35,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "asyncpg>=0.30,<1",
  "geoalchemy2>=0.17,<1",
  "alembic>=1.15,<2",
  "shapely>=2.1,<3",
  "httpx>=0.28,<1",
  "python-json-logger>=3.3,<4",
  "psycopg2-binary>=2.9,<3"
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.26,<1", "ruff>=0.11,<1", "mypy>=1.15,<2"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]
